fix broken links

--- a/index.html
+++ b/index.html
@@ -1200,12 +1200,12 @@
                   <div class="st-post-info">
                     <div class="st-post-date">
                       By:
-                      <a href="#" class="st-post-author">Dominic Swaby</a>
+                      <a href="https://www.linkedin.com/in/dominic-swaby-5b43681a5/" class="st-post-author" target="_blank">Dominic Swaby</a>
                       <span class="st-post-date-divider"></span>
                       <span class="st-post-publish-date"></span>
                     </div>
                     <h4 class="st-post-title">
-                      <a href="blog-details.html"
+                      <a href="https://splitbuys.herokuapp.com/" target="_blank"
                         >SplitBuys</a
                       >
                     </h4>
@@ -1224,12 +1224,12 @@
                   <div class="st-post-info">
                     <div class="st-post-date">
                       By:
-                      <a href="#" class="st-post-author">Dominic Swaby</a>
+                      <a href="https://www.linkedin.com/in/dominic-swaby-5b43681a5/" class="st-post-author" target="_blank">Dominic Swaby</a>
                       <span class="st-post-date-divider"></span>
                       <span class="st-post-publish-date"></span>
                     </div>
                     <h4 class="st-post-title">
-                      <a href="blog-details.html"
+                      <a href="https://hanzikanji.com/" target="_blank"
                         >HanziKanji</a
                       >
                     </h4>
@@ -1238,7 +1238,7 @@
               </div>
               <div class="slick-slide-in">
                 <div class="st-post-single st-style1">
-                  <a href="https://learn2math.herokuapp.com/#/" class="st-post-thumb st-zoom">
+                  <a href="https://learn2math.herokuapp.com/#/" class="st-post-thumb st-zoom" target="_blank">
                     <img
                       src="assets/img/learn2math/learn2math_quiz_square.png"
                       class="st-zoom-in"
@@ -1248,12 +1248,12 @@
                   <div class="st-post-info">
                     <div class="st-post-date">
                       By:
-                      <a href="#" class="st-post-author">Dominic Swaby</a>
+                      <a href="https://www.linkedin.com/in/dominic-swaby-5b43681a5/" class="st-post-author" target="_blank">Dominic Swaby</a>
                       <span class="st-post-date-divider"></span>
                       <span class="st-post-publish-date"></span>
                     </div>
                     <h4 class="st-post-title">
-                      <a href="blog-details.html"
+                      <a href="https://learn2math.herokuapp.com/#/" target="_blank"
                         >Learn2Math</a
                       >
                     </h4>
