add linked in meta snippets to display image in linked in

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Dominic Swaby" />
+     <meta property="og:title" content="Portfolio site" />
+     <meta property="og:image" content="assets/img/portfolio_pic.png" />
+     <meta
+       property="og:description"
+       content="My portfolio site contains my work, resume, background, skills, experience, and contact information."
+     />
+     <meta
+       property="og:url"
+       content="https://swaby.me/"
+     />
     <!-- Page Title -->
     <title>Dominic Swaby - Portfolio</title>
     <!-- Favicon Icon -->
