add Cognixia to experience

--- a/index.html
+++ b/index.html
@@ -632,6 +632,24 @@
               <div class="st-height-b50 st-height-lg-b30"></div>
 
               <div class="st-resume-timeline-wrap">
+                 <div class="st-resume-timeline">
+                  <h3 class="st-resume-timeline-title">
+                    Backend Java Developer 
+                  </h3>
+                  <div class="st-resume-timeline-duration">
+                    Jun 2023 - present
+                  </div>
+                  <h4 class="st-resume-timeline-subtitle">
+                    Cognixia USA
+                  </h4>
+                  <div class="st-resume-timeline-text">
+                    <p>
+                      Specialize in writing clean and secure Java Spring Boot API's, and engineering appropriate AWS cloud architecture to facilitate development and deployment.
+                    </p>
+                  </div>
+                </div>
+                <!-- st-resume-timeline -->
+                <div class="st-height-b50 st-height-lg-b30"></div>
                 <div class="st-resume-timeline">
                   <h3 class="st-resume-timeline-title">
                     Junior Frontend Web Developer 
