change stuff to reflect java expertise

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
         <div class="st-hero-text">
           <h1>Hi, I am <span>Dominic Swaby</span></h1>
           <p>
-            I am a fullstack web developer. I can provide clean and efficient
-            code, and pixel perfect design.
+            <!-- I am a fullstack web developer. I can provide clean and efficient
+            code, and pixel perfect design. -->
+            I am a Backend Java / Spring Boot Developer, specializing in crafting secure, clean and efficient code for robust web applications.
           </p>
           <div class="st-hero-social-links">
             <a
@@ -139,10 +140,11 @@
                   <h2 class="st-text-block-title text-center">
                     Hi There! I'm Dominic Swaby
                   </h2>
-                  <h4 class="st-text-block-subtitle text-center">Fullstack Developer</h4>
+                  <h4 class="st-text-block-subtitle text-center">Backend Developer</h4>
                   <div class="st-text-block-text">
                     <p>
-                      I am a fullstack web developer with a passion for creating elegant, functional, and user-friendly websites. With experience in both front-end and back-end development, I specialize in bringing dynamic and responsive designs to life.
+                      <!-- I am a fullstack web developer with a passion for creating elegant, functional, and user-friendly websites. With experience in both front-end and back-end development, I specialize in bringing dynamic and responsive designs to life. -->
+                      I am a dedicated Backend Java Spring Boot Developer with a strong commitment to crafting efficient and robust web applications. With expertise in backend development I ensure the security, functionality and performance of every system.
                     </p>
                   </div>
                   <ul class="st-text-block-details st-mp0">
@@ -489,7 +491,7 @@
                   Here's a summary of my web dev skills.
                 </h2>
                 <div class="st-skill-subtitle">
-                  I have experience in and have created web apps using a variety of stacks with special focus on ruby on rails and node in the backend and react in the frontend. <br /><br />I'm also highly skilled in SQL in addition to non-relational databases and database design.
+                  I have experience in and have created web apps using a variety of stacks, now with a special focus on Java and Spring boot in the backend and React in the frontend. <br /><br />I'm also highly skilled in using SQL with relational databases, in addition to working with non-relational databases and database design.  Finally I'm well versed in implementing secure and efficient cloud architecture patterns in AWS. 
                 </div>
               </div>
               <!-- .st-skill-heading -->
@@ -503,7 +505,7 @@
             <div class="st-progressbar-wrap">
               <div class="st-single-progressbar">
                 <div class="st-progressbar-heading">
-                  <h3 class="st-progressbar-title">Ruby on Rails</h3>
+                  <h3 class="st-progressbar-title">Java / Spring Boot</h3>
                   <div
                     class="st-progressbar-percentage wow fadeInLeft"
                     data-wow-duration="1.5s"
@@ -537,16 +539,17 @@
               <div class="st-height-b30 st-height-lg-b20"></div>
               <div class="st-single-progressbar">
                 <div class="st-progressbar-heading">
-                  <h3 class="st-progressbar-title">Python / Flask</h3>
+                  <h3 class="st-progressbar-title">AWS (Amazon Web Services)
+                  </h3>
                   <div
                     class="st-progressbar-percentage wow fadeInLeft"
                     data-wow-duration="1.5s"
                     data-wow-delay="0.5s"
                   >
-                    75%
+                    85%
                   </div>
                 </div>
-                <div class="st-progressbar" data-progress="75">
+                <div class="st-progressbar" data-progress="85">
                   <div class="st-progressbar-in wow fadeInLeft"></div>
                 </div>
               </div>
@@ -554,7 +557,7 @@
               <div class="st-height-b30 st-height-lg-b20"></div>
               <div class="st-single-progressbar">
                 <div class="st-progressbar-heading">
-                  <h3 class="st-progressbar-title">HTML and CSS</h3>
+                  <h3 class="st-progressbar-title">JS / React (w/ HTML and CSS)</h3>
                   <div
                     class="st-progressbar-percentage wow fadeInLeft"
                     data-wow-duration="1.5s"
