change welcome description

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <p>
             <!-- I am a fullstack web developer. I can provide clean and efficient
             code, and pixel perfect design. -->
-            I am a Backend Java / Spring Boot Developer, specializing in crafting secure, clean and efficient code for robust web applications.
+            I am a Fullstack web developer experienced building large web2 applications in Java / Spring Boot / Javascript / React, and skilled in writing web3 applications with high test coverage in Solidity.
           </p>
           <div class="st-hero-social-links">
             <a
