update resume link

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                   <li><a href="#home" class="st-smooth-move">Home</a></li>
                   <li><a href="#about" class="st-smooth-move">About</a></li>
                   <li><a href="#resume" class="st-smooth-move">Resume</a></li>
-                  <li>
+                  <!-- <li>
                     <a href="#portfolio" class="st-smooth-move">Portfolio</a>
-                  </li>
+                  </li> -->
                   <!-- <li><a href="#blog" class="st-smooth-move">Blog</a></li> -->
                   <li><a href="#contact" class="st-smooth-move">Contact</a></li>
                 </ul>
@@ -154,7 +154,7 @@
                   </ul>
                   <div class="st-text-block-btn text-center">
                     <a
-                      href="https://drive.google.com/file/d/1KcW15Rh5dmHqT_73eX_-ImYMveYiMZ8N/view?usp=sharing"
+                      href="https://docs.google.com/document/d/1RkRtd0NQ4F_-TYXVMrg8mmZWowwkrwq7/edit?usp=sharing&ouid=104060564279548978578&rtpof=true&sd=true"
                       class="st-btn st-style1 st-color1"
                       >View CV</a
                     >
